--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Test Web Application</title>
+  </head>
+  <body>
+    <h1>Test Web Application</h1>
+    <p>Hey look, Ma. I made a web page.</p>
+    <h4>Sarah Murray</h4>
+  </body>
+</html>
