--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Test Web Application</h1>
     <p>Hey look, Ma. I made a web page.</p>
+    <a href="css-demo.html"> Link to CSS Demo </a>
     <h4>Sarah Murray</h4>
   </body>
 </html>
