--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Test Web Application</title>
   </head>
   <body>
-    <h1>Test Web Application</h1>
-    <p>Hey look, Ma. I made a web page.</p>
+    <h4>Sarah Murray</h4>
+    <h1>Test Web Applications</h1>
+    <p>Once upon a time a lady went to grad school and practiced some coding languages for Don's class. Hopefully, that is not the end.</p>
+    <br/>
     <a href="css_demo.html"> Link to CSS Demo </a>
     <h4>Sarah Murray</h4>
   </body>
