--- a/font-sample.html
+++ b/font-sample.html
@@ -3,8 +3,52 @@
 <html>
   <head>
     <title>Sarah Murray Font Sample</title>
+    <style>
+      <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
+      p {
+          font-size: 11px;
+          padding-bottom: 30px;
+          width: 100%;
+          font-family: 'Gothic A1', sans-serif;
+          font-style: light;
+          }
+
+</style>
+
   </head>
   <body>
+    <h1> Romeo and Juliette </h1>
+    <h2> by Mark Knopfler </h2>
+    
+    
+    <p>
+    A love struck romeo
+    Sings the streets a serenade
+    Now he's laying everybody low
+    He's got a love song that he made
+    He finds a streetlight
+    And he steps out of the shade
+    And says something like
+    "you and me, babe, how about it?"
+    </p>  
   
+    <p>
+    Juliet says "hey, it's romeo!"
+    "you nearly give me a heart attack!"
+    Yeah well, he's underneath the window
+    Now she's singing "hey-la, my boyfriend's back"
+    "you shouldn't come around here
+    Singing up at people like that
+    Ah anyway, whatcha gonna do about it?"
+    </p>
+
+    <p>
+    Juliet
+    The dice were loaded from the start
+    And I bet and you exploded into my heart
+    And I forget, I forget the movie song
+    When you gonna realize
+    It was just that the time was wrong
+    </p>
   </body>
 </html>
