--- a/font-sample.html
+++ b/font-sample.html
@@ -18,7 +18,7 @@
     <h2> by Mark Knopfler </h2>
     
     
-    <p class=.lyric>
+    <p class="lyric">
     A love struck romeo <br/>
     Sings the streets a serenade<br/>
     Now he's laying everybody low<br/>
