--- a/font-sample.html
+++ b/font-sample.html
@@ -10,6 +10,9 @@
           width: 100%;
           font-family: 'Gothic A1', sans-serif;
           }
+      p {
+        font-family: 'Gothic A1', sans-serif;
+      }
 </style>
 
   </head>
