--- a/font-sample.html
+++ b/font-sample.html
@@ -3,16 +3,18 @@
   <head>
     <title>Sarah Murray Font Sample</title>
     <style>
-      <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
-      .lyric {
-          font-size: 11px;
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+h1, h2, h3 {
+    font-family: 'PT Sans', sans-serif;
+}
+         /*save for later font-size: 11px;
           padding-bottom: 30px;
           width: 100%;
           font-family: 'Gothic A1', sans-serif;
           }
       p {
         font-family: 'Gothic A1', sans-serif;
-      }
+      }/
 </style>
 
   </head>
