--- a/font-sample.html
+++ b/font-sample.html
@@ -3,9 +3,10 @@
   <head>
     <title>Sarah Murray Font Sample</title>
     <style>
-    <link href='http://fonts.googleapis.com/css?family=Gothic+A1' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
+
       p {
-        font-family: 'Gothic A1', sans-serif;
+        font-family: 'PT Sans', sans-serif;
       }/
 </style>
 
