--- a/font-sample.html
+++ b/font-sample.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <title>Sarah Murray Font Sample</title>
+    <link href="https://fonts.googleapis.com/css?family=Gothic+A1" rel="stylesheet">
     <style>
-    <link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
-
-      h1, h2, h3 {
-        font-family: 'PT Sans', sans-serif;
+      .lyric{
+        font-family: 'Gothic A1', sans-serif;
       }/
 </style>
 
