--- a/font-sample.html
+++ b/font-sample.html
@@ -26,7 +26,7 @@
     "you and me, babe, how about it?"<br/>
     </p>  
   
-    <p>
+    <p class="lyric">
     Juliet says "hey, it's romeo!"<br/>
     "you nearly give me a heart attack!"<br/>
     Yeah well, he's underneath the window<br/>
@@ -36,7 +36,7 @@
     Ah anyway, whatcha gonna do about it?"<br/>
     </p>
 
-    <p>
+    <p class="lyric">
     Juliet
     The dice were loaded from the start<br/>
     And I bet and you exploded into my heart<br/>
