--- a/font-sample.html
+++ b/font-sample.html
@@ -6,11 +6,12 @@
     <style>
       .lyric{
         font-family: 'Gothic A1', sans-serif;
-        padding-bottom: 20px;
+        font-size: 12px
+        padding: 20px;
+        color: 'gray';
       }
       .juliet {
       font-family: 'League Script', cursive;
-      font-color: 'gray';
       }
       h2 {
       font-family: 'Six Caps', sans-serif;
