--- a/font-sample.html
+++ b/font-sample.html
@@ -6,7 +6,7 @@
     <style>
       .lyric{
         font-family: 'Gothic A1', sans-serif;
-        font-size: 12px
+        font-size: 12px;
         padding: 20px;
         color: 'gray';
       }
