--- a/font-sample.html
+++ b/font-sample.html
@@ -4,8 +4,10 @@
     <title>Sarah Murray Font Sample</title>
     <link href="https://fonts.googleapis.com/css?family=Gothic+A1|League+Script|Six+Caps" rel="stylesheet">
     <style>
-      .lyric{
+        p, h1, h2 {
         font-family: 'Gothic A1', sans-serif;
+      }
+      .lyric{
         font-size: 12px;
         padding: 20px;
         color: 'gray';
@@ -23,9 +25,9 @@
     <h1> Romeo and Juliet </h1>
     <h2> by Mark Knopfler </h2>
     
+    <div class="juliet">A love struck romeo</div>
     
     <p class="lyric">
-    <div class="juliet">A love struck romeo</div><br/>
     Sings the streets a serenade<br/>
     Now he's laying everybody low<br/>
     He's got a love song that he made<br/>
