--- a/font-sample.html
+++ b/font-sample.html
@@ -5,15 +5,16 @@
     <title>Sarah Murray Font Sample</title>
     <style>
         p, h1, h2 {
-        font-family: 'Gothic A1', sans-serif;
+          font-family: 'Gothic A1', sans-serif;
       }
       .lyric{
         font-size: 12px;
         padding: 20px;
-        color: 'gray';
+        font-weight: light;
       }
       .juliet {
       font-family: 'League Script', cursive;
+      font-size: 18px;
       }
       
       h1 {
@@ -21,10 +22,10 @@
         font-weight: Black;
       
       h2 {
-      font-family: 'Six Caps', sans-serif;
-      font-size: 16px;
-      letter-spacing: 2;
-      color: #C0C0C0;
+        font-family: 'Six Caps', sans-serif;
+        font-size: 16px;
+        letter-spacing: 2;
+        color: #C0C0C0;
       }
 </style>
 
