--- a/font-sample.html
+++ b/font-sample.html
@@ -58,8 +58,7 @@
     </p>
 
     
-    <div class="juliet">Juliet</div>
-    The dice were loaded from the start<br/>
+    <div class="juliet">Juliet The dice were loaded from the start</div><br/>
     <p class="lyric">
     And I bet and you exploded into my heart<br/>
     And I forget, I forget the movie song<br/>
