--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Test Web Applications</h1>
     <p>Once upon a time a lady went to grad school and practiced some coding languages for Don's class. Hopefully, that is not the end.</p>
     <br/>
-    <a href="css_demo.html"> Link to CSS Demo </a>
+    <a href="css_demo.html"> Link to CSS Demo </a> <br/>
     <a href="font-sample.html"> Link to Font Demo </a>
   </body>
 </html>
