--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Once upon a time a lady went to grad school and practiced some coding languages for Don's class. Hopefully, that is not the end.</p>
     <br/>
     <a href="css_demo.html"> Link to CSS Demo </a> <br/>
-    <a href="font-sample.html"> Link to Font Demo </a>
+    <a href="font-sample.html"> Link to Font Demo </a> <br/>
+    <a href="bootstrap-sample.html"> Link to Bootstrap Demo </a> 
   </body>
 </html>
