--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -7,9 +7,36 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <!-- Box CSS -->  
+    <style>
+      .grid {
+  border: 2px blue solid;
+  height: 100px;
+  width: 100px;
+  display: grid;
+   
+}
+
+.box {
+  background-color: lightblue;
+  color: white;
+  border-radius: 5px;
+  border: 2px dodgerblue solid;
+  font-family: helvetica, arial, sans-serif;
+  font-color: lightblue;
+
+}
+    </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+      <div class="grid">
+    <div class="box a">Eenie</div>
+    <div class="box b">Meenie</div>
+    <div class="box c">Minie</div>
+    <div class="box d">Mo</div>
+    <div class="box e">Catch a tiger</div>
+    <div class="box f">By the toe</div>    
+  </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
