--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <!-- Box CSS -->  
     <style>
-      .grid {
-  display: grid;
-   
-}
+  .grid {
+    display: grid;
+    grid-template-rows: 3;
+    grid-template-columns: 3;
+       }
 
 .box {
   background-color: lightblue;
