--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -9,30 +9,33 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <!-- Box CSS -->  
     <style>
-  .grid {
-    display: grid;
-       }
-
-.box {
-  background-color: lightblue;
-  color: white;
-  border-radius: 5px;
-  border: 2px dodgerblue solid;
-  font-family: helvetica, arial, sans-serif;
-  font-color: lightblue;
-
+.grid-container {
+  display: inline-grid;
+  grid-template-columns: auto auto auto;
+  background-color: #2196F3;
+  padding: 10px;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
 }
     </style>
   </head>
   <body>
-      <div class="grid">
-    <div class="box a">Eenie</div>
-    <div class="box b">Meenie</div>
-    <div class="box c">Minie</div>
-    <div class="box d">Mo</div>
-    <div class="box e">Catch a tiger</div>
-    <div class="box f">By the toe</div>    
-  </div>
+<div class="grid-container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>  
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>  
+  <div class="grid-item">7</div>
+  <div class="grid-item">8</div>
+  <div class="grid-item">9</div>  
+</div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
