--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -26,23 +26,16 @@
   </head>
   <body>
 <div class="container">
+<div class="container">
   <div class="row">
-    <div class="col">
-      1 of 2
+    <div class="col-sm">
+      One of three columns
     </div>
-    <div class="col">
-      2 of 2
+    <div class="col-sm">
+      One of three columns
     </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      2 of 3
-    </div>
-    <div class="col">
-      3 of 3
+    <div class="col-sm">
+      One of three columns
     </div>
   </div>
 </div>
