--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <!-- Box CSS -->  
     <style>
+      div.col-sm {
+      border: 1px dotted gray;
+      }
     </style>
   </head>
   <body>
