--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -10,7 +10,9 @@
     <!-- Box CSS -->  
     <style>
       div.col-sm {
-      border: 1px dotted gray;
+      border: 1px dotted black;
+      padding: 2px 1px 2px 1px
+      color: #F0FFFF;
       }
     </style>
   </head>
