--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -12,7 +12,7 @@
       div.col-sm {
       border: 1px dotted white;
       padding: 2px 1px 2px 1px
-      color: #F0FFFF;
+      background-color: lightblue;
       font-family: TimesNewRoman, Times New Roman, Times, Baskerville, Georgia, serif;
       }
       h1 {
