Updated page description and ran an xml beautifier.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>Test Web Application</title>
-  </head>
-  <body>
-    <h4>Sarah Murray</h4>
-    <h1>Test Web Applications</h1>
-    <p>Once upon a time a lady went to grad school and practiced some coding languages for Don's class. Hopefully, that is not the end.</p>
-    <br/>
-    <a href="css_demo.html"> Link to CSS Demo </a> <br/>
-    <a href="font-sample.html"> Link to Font Demo </a> <br/>
-    <a href="bootstrap-sample.html"> Link to Bootstrap Demo </a> 
-  </body>
+    <head>
+        <title>Test Web Application</title>
+    </head>
+    <body>
+        <h4>Sarah Murray ·  Interactive Tech · MHCID  · UCI</h4>
+        <h1>Test Web Applications</h1>
+        <p>Once upon a time a lady went to grad school and practiced some coding languages for Don's class. Hopefully, that is not the end.</p>
+        <br />
+        <a href="css_demo.html"> Link to CSS Demo </a>
+        <br />
+        <a href="font-sample.html"> Link to Fonts Demo </a>
+        <br />
+        <a href="bootstrap-sample.html"> Link to Bootstrap Demo </a>
+    </body>
 </html>
